--- a/style.css
+++ b/style.css
@@ -37,3 +37,33 @@ td{
     float: right;
     margin-top: -15px;
 }
+.form-control{
+    font-size: 24px;
+    border-width: 1px;
+}
+.custom-select{
+    font-size: 24px;
+}
+
+@media (max-width: 992px){
+    .form-control{
+        font-size: 40px;
+        margin-bottom: 50px;
+    } 
+    label{
+        font-size: 30px;
+    }
+    button{
+        height: 100px;
+        font-size: 30px !important;
+    }
+    select{
+        font-size: 30px;
+    }
+    .custom-select{
+        font-size: 42px;
+    }
+    .button-mobile-size{
+        font-size: 30px !important;
+    }
+}
