--- a/style.css
+++ b/style.css
@@ -44,6 +44,17 @@ td{
 .custom-select{
     font-size: 24px;
 }
+.margin-button{
+    margin:20px 0 0 15px;
+    float: right;
+}
+.admin-login{
+    float:right;
+    margin: 5px 5px 0 0;
+    position: absolute;
+    right: 0.5%;
+    top: 0.5%;
+}
 
 @media (max-width: 992px){
     .form-control{
@@ -65,5 +76,15 @@ td{
     }
     .button-mobile-size{
         font-size: 30px !important;
+    }
+    .card-img-top{
+        margin: auto;
+    }
+    .card-body{
+        margin: auto;
+    }
+    .admin-login{
+        height: 50px;
+        font-size: 24px !important;
     }
 }
